--- a/Artikelverwaltung/pom.xml
+++ b/Artikelverwaltung/pom.xml
@@ -80,19 +80,33 @@
         </dependency>
     -->
 
-    <!-- neu -->
+    <!-- mySQL -->
     <dependency>
       <groupId>mysql</groupId>
       <artifactId>mysql-connector-java</artifactId>
       <version>8.0.28</version>
     </dependency>
 
-
+    <!-- Hibernate -->
     <dependency>
       <groupId>org.hibernate</groupId>
       <artifactId>hibernate-core</artifactId>
       <version>6.2.24.Final</version>
     </dependency>
+
+    <!-- JAXB Java Architecture for SML Binding for converting the emissions.xml -->
+    <dependency>
+      <groupId>jakarta.xml.bind</groupId>
+      <artifactId>jakarta.xml.bind-api</artifactId>
+        <version>4.0.0</version>
+    </dependency>
+    <dependency>
+      <groupId>org.glassfish.jaxb</groupId>
+      <artifactId>jaxb-runtime</artifactId>
+      <version>4.0.2</version>
+      <scope>runtime</scope>
+    </dependency>
+
 
   </dependencies>
 </project>
